--- a/views/footerInfo.html
+++ b/views/footerInfo.html
@@ -1,5 +1,4 @@
 <div class="footer">
   <p>Copyright © 2002-2015 Demostar Software. All rights reserved.</p>
-  <p>version: {{ footerCtrl.info.version }}</p>
-  <p>status: {{ footerCtrl.info.status }}</p>
+  <p>version: {{ footerCtrl.info.version }} <br> status: {{ footerCtrl.info.status }}</p>
 </div>
