--- a/main.css
+++ b/main.css
@@ -1,3 +1,13 @@
 .footer {
   text-align: center;
+  color: #333;
+}
+
+.footer a {
+  text-decoration: none;
+  color: #333;
+}
+.footer a:hover {
+  text-decoration: none;
+  color: #6699FF;
 }
