--- a/views/footerInfo.html
+++ b/views/footerInfo.html
@@ -1,4 +1,9 @@
 <div class="footer">
-  <p>Copyright © 2002-2015 Demostar Software. All rights reserved.</p>
-  <p>version: {{ footerCtrl.info.version }} <br> status: {{ footerCtrl.info.status }}</p>
+  <p>
+    Copyright © {{ companyInfo.year }} {{ companyInfo.name }}
+    <span> | </span>
+    <a ng-href="{{ companyInfo.website }}">{{ companyInfo.websiteName }}</a>
+    <span> | </span>
+    版本: {{ companyInfo.version }} {{ companyInfo.status }}
+  </p>
 </div>
