--- a/views/footerInfo.html
+++ b/views/footerInfo.html
@@ -1,9 +1,9 @@
 <div class="footer">
-  <p>
-    Copyright © {{ companyInfo.year }} {{ companyInfo.name }}
-    <span> | </span>
-    <a ng-href="{{ companyInfo.website }}">{{ companyInfo.websiteName }}</a>
-    <span> | </span>
-    版本: {{ companyInfo.version }} {{ companyInfo.status }}
-  </p>
+	<p>
+		<span>Copyright © {{ companyInfo.year }} {{ companyInfo.name }}</span>
+		<span> | </span>
+		<a ng-href="{{ companyInfo.website }}" class="">{{ companyInfo.websiteName }}</a>
+		<span> | </span>
+		<span>version: {{ companyInfo.version }} {{ companyInfo.status }}</span>
+	</p>
 </div>
