modify footer template

--- a/views/footerInfo.html
+++ b/views/footerInfo.html
@@ -2,7 +2,7 @@
 	<p>
 		<span>Copyright © {{ companyInfo.year }} {{ companyInfo.name }}</span>
 		<span> | </span>
-		<a ng-href="{{ companyInfo.website }}" class="">{{ companyInfo.websiteName }}</a>
+		<a ng-href="{{ companyInfo.website }}">{{ companyInfo.websiteName }}</a>
 		<span> | </span>
 		<span>version: {{ companyInfo.version }} {{ companyInfo.status }}</span>
 	</p>
