add comment and modify README

--- a/views/footerInfo.html
+++ b/views/footerInfo.html
@@ -1,5 +1,6 @@
 <div class="footer">
 	<p>
+	  <!-- use span for test accessibility -->
 		<span>Copyright © {{ companyInfo.year }} {{ companyInfo.name }}</span>
 		<span> | </span>
 		<a ng-href="{{ companyInfo.website }}">{{ companyInfo.websiteName }}</a>
